
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timezone {int dummy; } ;
struct timeval {scalar_t__ tv_usec; scalar_t__ tv_sec; } ;


 int MAX_ENCODED_LEN ;
 int gettimeofday (struct timeval*,struct timezone*) ;
 int memset (unsigned char*,int,int ) ;
 int rand () ;
 int sprintf (char*,char*,int,int) ;
 int srand (scalar_t__) ;
 int strcat (unsigned char*,char*) ;
 int strlen (char*) ;

int encode_alphanum(unsigned char *dest,unsigned char *src,int len){
  char dump[2];
  int i,n, input, A, B, C, D, E, F;
  char* valid_chars;
  struct timeval tv;
  struct timezone tz;
  memset(dest,0x00,MAX_ENCODED_LEN);
  gettimeofday(&tv, &tz);
  srand((int)tv.tv_sec*1000+tv.tv_usec);
  strcat(src,"\x80");
  valid_chars = "0123456789BCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
  for(n=0;n<len;n++) {
    input = src[n];
    A = (input & 0xf0) >> 4;
    B = (input & 0x0f);
    F = B;
    i = rand() % strlen(valid_chars);
    while ((valid_chars[i] & 0x0f) != F) { i = ++i % strlen(valid_chars); }
    E = valid_chars[i] >> 4;
    D = (A^E);
    i = rand() % strlen(valid_chars);
    while ((valid_chars[i] & 0x0f) != D) { i = ++i % strlen(valid_chars); }
    C = valid_chars[i] >> 4;
    sprintf(dump,"%c%c", (C<<4)+D, (E<<4)+F);
    strcat(dest,dump);
  }
  strcat(dest,"A");
  return 0;
}
